Fix: loader not showing on screen

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,18 @@ select {
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(93, 81, 104, 0.5);
 }
+
+.loader {
+  width: 24px;
+  height: 24px;
+  border: 2px solid var(--sidebar-item-hover-border-color);
+  border-top-color: #8472a1;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
